--- a/WebIBOST/WebIBOST.csproj
+++ b/WebIBOST/WebIBOST.csproj
@@ -66,7 +66,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CustomerSale.aspx" />
+    <Content Include="CustomerSaleMaster.aspx" />
     <Content Include="IMG\photo.jpg" />
     <Content Include="less\mixins.less" />
     <Content Include="less\sb-admin-2.less" />
@@ -233,12 +233,12 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomerSale.aspx.cs">
-      <DependentUpon>CustomerSale.aspx</DependentUpon>
+    <Compile Include="CustomerSaleMaster.aspx.cs">
+      <DependentUpon>CustomerSaleMaster.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="CustomerSale.aspx.designer.cs">
-      <DependentUpon>CustomerSale.aspx</DependentUpon>
+    <Compile Include="CustomerSaleMaster.aspx.designer.cs">
+      <DependentUpon>CustomerSaleMaster.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
