--- a/WebIBOST1/WebIBOST1.csproj
+++ b/WebIBOST1/WebIBOST1.csproj
@@ -110,6 +110,7 @@
     <Content Include="IMG\photo.jpg" />
     <Content Include="IMG\sort_asc.png" />
     <Content Include="IMG\sort_desc.png" />
+    <Content Include="ManageUserAuthorize.aspx" />
     <Content Include="ModelData.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>ModelData.Context.cs</LastGenOutput>
@@ -210,6 +211,13 @@
     <Compile Include="Layout.Master.designer.cs">
       <DependentUpon>Layout.Master</DependentUpon>
     </Compile>
+    <Compile Include="ManageUserAuthorize.aspx.cs">
+      <DependentUpon>ManageUserAuthorize.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ManageUserAuthorize.aspx.designer.cs">
+      <DependentUpon>ManageUserAuthorize.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ModelData.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -249,6 +257,9 @@
     </Compile>
     <Compile Include="Table.aspx.designer.cs">
       <DependentUpon>Table.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User_UserGroup.cs">
+      <DependentUpon>ModelData.tt</DependentUpon>
     </Compile>
     <Compile Include="WebForm1.aspx.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
