--- a/WebIBOST1/WebIBOST1.csproj
+++ b/WebIBOST1/WebIBOST1.csproj
@@ -286,6 +286,9 @@
     <Compile Include="User.cs">
       <DependentUpon>ContactModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="UserGroup.cs">
+      <DependentUpon>ModelData.tt</DependentUpon>
+    </Compile>
     <Compile Include="User_UserGroup.cs">
       <DependentUpon>ModelData.tt</DependentUpon>
     </Compile>
